# icd

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  meson.build  meson_options.txt
build-aux/meson/: meson-post-install.sh
data/: meson.build
data/config/: icd.conf.in  meson.build
data/systemd/: SETUP.md  icd.service.in  meson.build  timelapse.service.in
data/templates/: cameras.tmpl.in  footer.tmpl  header.tmpl  image.tmpl  images.tmpl.in  index.tmpl.in  meson.build  nav.tmpl
doc/: meson.build
doc/api/: API.md  icd.raml  meson.build  timelapse.raml
src/: app.vala  config.vala  database.vala  icd.gresource.xml  main.vala  meson.build  model.vala  router.vala  timelapse.gresource.xml  tl-app.vala  tl-config.vala  tl-main.vala  tl-router.vala
src/config/: icd-config.c  icd-config.h  icd-config.vapi  meson.build
src/models/: camera.vala  image.vala  job.vala
src/routes/: cameras.vala  images.vala  jobs.vala
src/static/js/: index.js
src/static/styles/: layout.css
src/templates/: index.tmpl  nav.tmpl
subprojects/: template-glib.wrap  valum.wrap
tests/: config.ini  images-test.vala  meson.build  simple.sh
vapi/: gphoto.h  libgda-5.0.vapi  libgphoto2.vapi
