# FIXME Should find a way to get these into build path w/o the empty configure

configure_file(
          input: 'header.tmpl',
         output: 'header.tmpl',
  configuration: subst,
        install: true,
    install_dir: join_paths(pkg_datadir, 'templates'),
)

configure_file(
          input: 'nav.tmpl',
         output: 'nav.tmpl',
  configuration: subst,
        install: true,
    install_dir: join_paths(pkg_datadir, 'templates'),
)

configure_file(
          input: 'footer.tmpl',
         output: 'footer.tmpl',
  configuration: subst,
        install: true,
    install_dir: join_paths(pkg_datadir, 'templates'),
)

configure_file(
          input: 'index.tmpl.in',
         output: 'index.tmpl',
  configuration: subst,
        install: true,
    install_dir: join_paths(pkg_datadir, 'templates'),
)

configure_file(
          input: 'images.tmpl.in',
         output: 'images.tmpl',
  configuration: subst,
        install: true,
    install_dir: join_paths(pkg_datadir, 'templates'),
)

configure_file(
          input: 'cameras.tmpl.in',
         output: 'cameras.tmpl',
  configuration: subst,
        install: true,
    install_dir: join_paths(pkg_datadir, 'templates'),
)
